argocd/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-go-api-service
spec:
  selector:
    app: simple-go-api
  type: ClusterIP
  ports:
  - targetPort: 7001
    port: 7001
    protocol: TCP
